<resources>
    <string name="app_name">Exercicio Um</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="administrador">Administrador</string>
    <string name="terceiro">Terceiro</string>
    <string name="salvar">Salvar</string>
    <string name="nomeUsuario">Nome do usuário</string>
    <string name="title_activity_dados_usuario">DadosUsuario</string>
</resources>
